--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ scikit-learn==1.0.1
 streamlit-lottie==0.0.3	
 requests==2.28.1
 seaborn	==0.12.0	
+matplotlib==3.6.0
+textblob==0.17.1
+tweepy==4.10.1
+wordcloud==1.8.2.2
